--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </header>
     <div class="mobile-nav">
-        <img class="mobile-nav-logo" src="./img/logo.svg" alt="Logo" />
+        <img class="mobile-nav-logo" src="./img/Logo.svg" alt="Logo" />
 
         <nav class="mobile-nav-list">
             <ul>
