relocating files to folders

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./fonts/Lato/stylesheet.css">
     <link rel="stylesheet" href="./fonts/Georgia/stylesheet.css">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="./media.css">
-    <link rel="stylesheet" href="./mobile-nav-button.css">
-    <link rel="stylesheet" href="./mobile-nav.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/media.css">
+    <link rel="stylesheet" href="./css/mobile-nav-button.css">
+    <link rel="stylesheet" href="./css/mobile-nav.css">
+    <script src="./js/nav.js"></script>
+    <title>Alivio!</title>
 </head>
 
 <body>
@@ -162,7 +163,6 @@
             </div>
         </div>
     </div>
-    <script src="./nav.js"></script>
 </body>
 
 </html>
