--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="./css/mobile-nav-button.css">
     <link rel="stylesheet" href="./css/mobile-nav.css">
-    <script src="/js/nav.js"></script>
     <title>Alivio!</title>
 </head>
 
@@ -163,6 +162,7 @@
             </div>
         </div>
     </div>
+    <script src="./js/nav.js"></script>
 </body>
 
 </html>
