--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
         </div>
     </div>
-    <script src="../js/nav.js"></script>
+    <script src="./js/nav.js"></script>
 </body>
 
 </html>
